fixed overflow issue after adding more than 1 items in the cart

--- a/src/styles/Cart.module.css
+++ b/src/styles/Cart.module.css
@@ -8,7 +8,7 @@
     padding: 1rem;
     margin: 0;
 
-    min-height: 85vh;
+
 }
 
 .cartContainer{
